# todo-app-api-rs

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-08-13-163225_create_tasks_table/: up.sql
migrations/2024-08-16-151143_create_tasks_table/: up.sql
src/: db.rs  db_cli.rs  handler.rs  lib.rs  main.rs  models.rs  schema.rs  tutorial.rs
src/examples/: main.rs
tests/: cli_db_test.rs
