[package]
name = "todo-app-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# API Framework
actix-web = "4"
# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
# JSON
serde_json = "1"
# .env
dotenv = "0.15"
# ORM: Object Relational Mapper
diesel = { version = "2.2", features = ["mysql", "chrono"] }
# date time
chrono = { version = "0.4", features = ["serde"] }
